--- a/views/index.pug
+++ b/views/index.pug
@@ -15,6 +15,6 @@ html
       h2 Example Usage:
       p
         h4 Request:
-        code https://morning-savannah-26026.herokuapp.com/December%2015,%202016<br>
+        code https://still-dusk-11533.herokuapp.com/<br>
         h4 Response:
         code {"language":"en-US","software":"X11; Linux x86_64; rv:45.0"}
