--- a/views/index.pug
+++ b/views/index.pug
@@ -1,11 +1,11 @@
 doctype
 html
   head
-    title Header Parser
+    title Header Parser Microservice
     link(rel='stylesheet' href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css")
   body
     div.container
-      h1.header Header Parser
+      h1.header Header Parser Microservice
       img(src= "https://avatars0.githubusercontent.com/tomzurales?&s=128")
       h3 By: Tom Zurales
       blockquote
@@ -15,6 +15,6 @@ html
       h2 Example Usage:
       p
         h4 Request:
-        code https://still-dusk-11533.herokuapp.com/<br>
+        code https://still-dusk-11533.herokuapp.com/parser/<br>
         h4 Response:
         code {"language":"en-US","software":"X11; Linux x86_64; rv:45.0"}
